--- a/index.html
+++ b/index.html
@@ -112,9 +112,18 @@
 
                             <div class="row">
                                 <div class="col-md-6">
+                                    <div id="alert_sucess" class="alert alert-success" role="alert" hidden="true">
+                                      <strong>Success! </strong> <span id="sucess_message">You successfully read this important alert message.</span>
+                                    </div>
+                                    <div id="alert-danger" class="alert alert-danger" role="alert" hidden="true">
+                                      <strong>Oops!</strong>Something wrong happened.
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-12">
                                     <p class="text-muted"><strong>*</strong> These fields are required. Contact form template by <a href="https://bootstrapious.com/p/how-to-build-a-working-bootstrap-contact-form" target="_blank">Bootstrapious</a>.</p>
                                 </div>
-
                             </div>
                         </div>
 
