--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
         <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
-        <link href='static/custom.css' rel='stylesheet' type='text/css'>
+        <link href='static/custom.min.css' rel='stylesheet' type='text/css'>
     </head>
     <body>
 
@@ -138,7 +138,6 @@
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-        <script src="static/validator.js"></script>
-        <script src="static/contact.js"></script>
+        <script src="static/emailmq.min.js"></script>
     </body>
 </html>
